# movegencpp

./: .gitignore  CMakeLists.txt  README.md  update.sh
benchmark/: CMakeLists.txt  knight.cpp  random.cpp
builds/: cmg
engine/: CMakeLists.txt
engine/src/: CMakeLists.txt  MoveGen.cpp  perft.cpp
engine/test/: CMakeLists.txt  test-Move.cpp  test-MoveGen.cpp  test-MoveGenValidator.cpp  test-main.cpp
include/chessmodule/movegencpp/: Move.h  MoveGen.h  MoveGenTester.h  consts.h  utils.h
include/cmg/: Move.h  MoveGen.h  MoveGenTester.h  consts.h  perft.h  utils.h
test/: CMakeLists.txt  test-Move.cpp  test-MoveGen.cpp  test-main.cpp
